--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,17 @@
 cmake_minimum_required(VERSION 3.18 FATAL_ERROR)
 project(LightSeq LANGUAGES C CXX CUDA)
 
-set(CMAKE_CUDA_ARCHITECTURES 60 61 70 75)
-find_package(CUDA 10.1 REQUIRED)
+set(CMAKE_CUDA_ARCHITECTURES
+    60
+    61
+    70
+    75
+    80
+    86
+    87)
+find_package(CUDA 11.6 REQUIRED)
 
 option(FP16_MODE "inference with fp16" OFF)
-option(INT8_MODE "inference with int8" OFF)
 option(DEBUG_MODE "debug computation result" OFF)
 option(DYNAMIC_API "build dynamic lightseq api library" OFF)
 
@@ -47,13 +53,6 @@ if(FP16_MODE)
   message(STATUS "Build using fp16 precision")
 else()
   message(STATUS "Build using fp32 precision")
-endif()
-
-if(INT8_MODE)
-  add_definitions(-DINT8_MODE)
-  message(STATUS "Build using int8 precision")
-else()
-  message(STATUS "Build using float precision")
 endif()
 
 if(DEBUG_MODE)
