--- a/lightseq/inference/model/CMakeLists.txt
+++ b/lightseq/inference/model/CMakeLists.txt
@@ -14,6 +14,22 @@ endif()
 
 target_include_directories(transformer_model PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
+set(quant_transformer_files quant_decoder.cc.cu quant_encoder.cc.cu
+                            cublas_helper.cc)
+add_library(quant_transformer_model STATIC ${quant_transformer_files})
+target_link_libraries(quant_transformer_model PUBLIC cuda_kernels)
+target_link_libraries(quant_transformer_model PUBLIC quant_transformer_weight)
+if(DYNAMIC_API)
+  target_link_libraries(quant_transformer_model PRIVATE CUDA::cublas
+                                                        CUDA::cublasLt)
+else()
+  target_link_libraries(quant_transformer_model PRIVATE CUDA::cublas_static
+                                                        CUDA::cublasLt_static)
+endif()
+
+target_include_directories(quant_transformer_model
+                           PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+
 add_library(gpt_model STATIC gpt_encoder.cc.cu)
 target_link_libraries(gpt_model PUBLIC cuda_kernels)
 target_link_libraries(gpt_model PUBLIC gpt_weight)
