Quantized Transformer pre-release (#235)
* add int8 for inference (ffn)

* quantize weights

* add compile option for int8

* add ffn int8 gemm for decoder

* add int8 gemm for qkv

* add int8 gemm for decoder

* load int8 pb (stage 1)

* load int8 pb (stage 2)

* use unsigned char to represent uint8

* add encoder clip_max

* add decoder clip_max

* fix decoder q project shape bug

* fix act kernel bug

* support compile with cuda 11

* remove redundant include

* compile using c++14

* support compile for training using cuda 11 and fix cub bug

* First try CublasLt

* Weight add transform to col32t

* i8 in i32 output

* Lt int8 all bug fixed

* add int8 logit gemm

* fix encoder int32_out_buf allocate bug

* modify float2int8 calculation

* Replace cublas int8 to lt

* Add fuse_residual_layer_norm kernel

* add scaled_colsum kernel of ffn2 weight, remove old version of cublas gemm (BLEU TEST OK)

* modify clip range of relu to [0, c]

* TODO: _trg_vocab_size must be 4x

* Replace all int8 cublas to cublasLt

* use relu clip range (0, c)

* remove default algo for cublasLt

* add test for cublas and tvm

* add more info for cublas gemm unit test

* load clip_max of gemm i8 out

* add int8 gemm io of logits

* add i8 gemm out of ker_arrange_decself_qkv

* split the beam search int kernel into two different versions (i8 and i32)

* finish decoder i8 gemm out (relu ad ffn2 gemm bug)

* finish encoder i8 gemm out (relu and ffn2 gemm bug)

* fix scale bug

* Unify all variable names and function names

* delete useless int8 kernels and add all col32 options

* delete useless int8 kernels and add all col32 options

* add test for batch gemm

* do not test cublaslt when bsz>1

* add more output info for cublas test

* polish cublas test code

* update proto and add clip_max for dec-self-attn-qkv-biias-out

* restore i32 out of ffn2 gemm out for relu clipmax(0, c)

* Int8 c

--- a/lightseq/inference/proto/CMakeLists.txt
+++ b/lightseq/inference/proto/CMakeLists.txt
@@ -10,6 +10,8 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 protobuf_generate_cpp(GPT_PROTO_SRC GPT_PROTO_HEADER gpt.proto)
 protobuf_generate_cpp(BERT_PROTO_SRC BERT_PROTO_HEADER bert.proto)
+protobuf_generate_cpp(Q_TRANSFORMER_PROTO_SRC Q_TRANSFORMER_PROTO_HEADER
+                      quant_transformer.proto)
 protobuf_generate_cpp(TRANSFORMER_PROTO_SRC TRANSFORMER_PROTO_HEADER
                       transformer.proto)
 
@@ -34,4 +36,15 @@ target_link_libraries(transformer_weight PUBLIC utils ${Protobuf_LIBRARIES}
 target_include_directories(transformer_weight
                            PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_include_directories(transformer_weight
+                           PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
+
+add_library(
+  quant_transformer_weight STATIC
+  quant_transformer_weight.cc ${Q_TRANSFORMER_PROTO_SRC}
+  ${Q_TRANSFORMER_PROTO_HEADER})
+target_link_libraries(quant_transformer_weight
+                      PUBLIC utils ${Protobuf_LIBRARIES} ${HDF5_LIBRARIES})
+target_include_directories(quant_transformer_weight
+                           PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(quant_transformer_weight
                            PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
