Update GPU build toolchain  (#258)
* modify & support 80 86

* build with glibc 2.24

* Repair for manylinux_2_24

* Fix format

Co-authored-by: zhoubofan <zhoubofan@bytedance.com>
Co-authored-by: Ying Xiong <xiongying.taka@bytedance.com>

--- a/docker/Dockerfile.pypi
+++ b/docker/Dockerfile.pypi
@@ -1,36 +1,39 @@
-FROM quay.io/pypa/manylinux2010_x86_64
+FROM quay.io/pypa/manylinux_2_24_x86_64
 
 
-ENV CUDA_VERSION 10.1.243
-ENV CUDA_PKG_VERSION 10-1-$CUDA_VERSION-1
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    gnupg2 curl ca-certificates build-essential \
+    python3-dev \
+    python3-pip \
+    python3-setuptools \
+    python3-wheel \
+    automake \
+    libtool \
+    curl \
+    make \
+    g++ \
+    unzip \
+    sshpass \
+    software-properties-common \
+    dirmngr\
+    apt-transport-https \
+    lsb-release \
+    ca-certificates \
+    openssh-client && \
+    rm -rf /var/lib/apt/lists/*
+
+RUN curl -O -L -C - https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64/cuda-ubuntu1804.pin && \
+    mv cuda-ubuntu1804.pin /etc/apt/preferences.d/cuda-repository-pin-600 && \
+    apt-key adv --fetch-keys https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64/7fa2af80.pub && \
+    add-apt-repository "deb https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64/ /" && \
+    apt-get update && apt-get install -y --no-install-recommends \
+    cuda-toolkit-11-3 && \
+    rm -rf /var/lib/apt/lists/*
 
 
-RUN yum -y install yum-utils && yum-config-manager --add-repo https://developer.download.nvidia.com/compute/cuda/repos/rhel6/x86_64/cuda-rhel6.repo &&\
-    yum install --setopt=obsoletes=0 -y \
-    # base
-    cuda-cudart-$CUDA_PKG_VERSION \
-    cuda-compat-10-1 \
-    # runtime
-    cuda-libraries-$CUDA_PKG_VERSION \
-    cuda-nvtx-$CUDA_PKG_VERSION \
-    cuda-npp-$CUDA_PKG_VERSION \
-    libcublas10-10.2.1.243-1 \
-    libnccl-2.7.8-1+cuda10.1 \
-    # devel
-    cuda-nvml-dev-$CUDA_PKG_VERSION \
-    cuda-command-line-tools-$CUDA_PKG_VERSION \
-    libcublas-devel-10.2.1.243-1 \
-    cuda-cudart-dev-$CUDA_PKG_VERSION \
-    cuda-libraries-dev-$CUDA_PKG_VERSION \
-    cuda-minimal-build-$CUDA_PKG_VERSION \
-    cuda-nvprof-$CUDA_PKG_VERSION \
-    cuda-npp-dev-$CUDA_PKG_VERSION \
-    libnccl-devel-2.7.8-1+cuda10.1 \
-    && ln -s cuda-10.1 /usr/local/cuda \
-    && yum clean all \
-    && rm -rf /var/cache/yum/*
-
-RUN yum install -y yum-plugin-versionlock && yum versionlock libcublas10
+ENV PATH /usr/local/nvidia/bin:/usr/local/cuda/bin:${PATH}
+ENV LD_LIBRARY_PATH /usr/local/nvidia/lib:/usr/local/nvidia/lib64
+ENV LIBRARY_PATH /usr/local/cuda/lib64/stubs
 
 
 # install protobuf
@@ -58,7 +61,6 @@ RUN curl -O -L -C - \
     cd hdf5-hdf5-1_12_0 && \
     ./configure --prefix=/usr/local/hdf5 "CFLAGS=-fPIC" "CXXFLAGS=-fPIC" --enable-build-mode=production && \
     make -j$(nproc) && make install && cd .. && rm -rf hdf5-hdf5-1_12_0
-
 
 ENV LIBRARY_PATH /usr/local/cuda/lib64/stubs:${LIBRARY_PATH}
 ENV PATH /usr/local/cuda/bin:/usr/local/hdf5:${PATH}
