--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,10 +5,10 @@ repos:
       - id: trailing-whitespace
       - id: end-of-file-fixer
 
-  - repo: https://github.com/pre-commit/mirrors-clang-format
-    rev: v13.0.0
+  - repo: https://gitlab.com/daverona/pre-commit-cpp
+    rev: 0.8.0
     hooks:
-      - id: clang-format
+      - id: clang-format # formatter of C/C++ code based on a style guide: LLVM, Google, Chromium, Mozilla, and WebKit available
         args: [-style=file]
 
   - repo: https://github.com/psf/black
