--- a/lightseq/inference/proto/CMakeLists.txt
+++ b/lightseq/inference/proto/CMakeLists.txt
@@ -14,6 +14,7 @@ protobuf_generate_cpp(Q_TRANSFORMER_PROTO_SRC Q_TRANSFORMER_PROTO_HEADER
                       quant_transformer.proto)
 protobuf_generate_cpp(TRANSFORMER_PROTO_SRC TRANSFORMER_PROTO_HEADER
                       transformer.proto)
+protobuf_generate_cpp(MOE_PROTO_SRC MOE_PROTO_HEADER moe.proto)
 
 add_library(gpt_weight STATIC gpt_weight.cc ${GPT_PROTO_SRC}
                               ${GPT_PROTO_HEADER})
@@ -48,3 +49,10 @@ target_include_directories(quant_transformer_weight
                            PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_include_directories(quant_transformer_weight
                            PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
+
+add_library(moe_weight STATIC moe_weight.cc ${MOE_PROTO_SRC}
+                              ${MOE_PROTO_HEADER})
+target_link_libraries(moe_weight PUBLIC utils ${Protobuf_LIBRARIES}
+                                        ${HDF5_LIBRARIES})
+target_include_directories(moe_weight PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(moe_weight PUBLIC ${CMAKE_CURRENT_BINARY_DIR})                        
