add cpp example of quant_transformer

--- a/examples/inference/cpp/CMakeLists.txt
+++ b/examples/inference/cpp/CMakeLists.txt
@@ -3,6 +3,9 @@ cmake_minimum_required(VERSION 3.18)
 add_executable(transformer_example transformer_example.cc)
 target_link_libraries(transformer_example PUBLIC liblightseq)
 
+add_executable(quant_transformer_example quant_transformer_example.cc)
+target_link_libraries(quant_transformer_example PUBLIC liblightseq)
+
 add_executable(bert_example bert_example.cc)
 target_link_libraries(bert_example PUBLIC liblightseq)
 
