add quant bert files

--- a/lightseq/inference/model/CMakeLists.txt
+++ b/lightseq/inference/model/CMakeLists.txt
@@ -52,6 +52,16 @@ else()
                                            CUDA::cublasLt_static)
 endif()
 
+add_library(quant_bert_model STATIC quant_bert_encoder.cc.cu)
+target_link_libraries(quant_bert_model PUBLIC cuda_kernels)
+target_link_libraries(quant_bert_model PUBLIC quant_bert_weight)
+if(DYNAMIC_API)
+  target_link_libraries(quant_bert_model PRIVATE CUDA::cublas CUDA::cublasLt)
+else()
+  target_link_libraries(quant_bert_model PRIVATE CUDA::cublas_static
+                                                 CUDA::cublasLt_static)
+endif()
+
 set(moe_files moe_decoder.cc.cu moe_encoder.cc.cu)
 add_library(moe_model STATIC ${moe_files})
 target_link_libraries(moe_model PUBLIC cuda_kernels)
