--- a/lightseq/inference/proto/CMakeLists.txt
+++ b/lightseq/inference/proto/CMakeLists.txt
@@ -10,6 +10,7 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 protobuf_generate_cpp(GPT_PROTO_SRC GPT_PROTO_HEADER gpt.proto)
 protobuf_generate_cpp(BERT_PROTO_SRC BERT_PROTO_HEADER bert.proto)
+protobuf_generate_cpp(Q_BERT_PROTO_SRC Q_BERT_PROTO_HEADER quant_bert.proto)
 protobuf_generate_cpp(Q_TRANSFORMER_PROTO_SRC Q_TRANSFORMER_PROTO_HEADER
                       quant_transformer.proto)
 protobuf_generate_cpp(TRANSFORMER_PROTO_SRC TRANSFORMER_PROTO_HEADER
@@ -28,6 +29,12 @@ add_library(bert_weight STATIC bert_weight.cc ${BERT_PROTO_SRC}
 target_link_libraries(bert_weight PUBLIC utils ${Protobuf_LIBRARIES})
 target_include_directories(bert_weight PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_include_directories(bert_weight PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
+
+add_library(quant_bert_weight STATIC quant_bert_weight.cc ${Q_BERT_PROTO_SRC}
+                                     ${Q_BERT_PROTO_HEADER})
+target_link_libraries(quant_bert_weight PUBLIC utils ${Protobuf_LIBRARIES})
+target_include_directories(quant_bert_weight PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(quant_bert_weight PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
 
 add_library(
   transformer_weight STATIC transformer_weight.cc ${TRANSFORMER_PROTO_SRC}
