t5 support: T5LayerNorm supported

--- a/lightseq/inference/kernels/CMakeLists.txt
+++ b/lightseq/inference/kernels/CMakeLists.txt
@@ -8,7 +8,9 @@ set(cuda_kernel_files
     embKernels.cc.cu
     embKernels_int8.cc.cu
     transformerKernels_int8.cc.cu
-    moeKernels.cc.cu)
+    moeKernels.cc.cu
+    t5Kernels.cc.cu
+    t5EmbKernels.cc.cu)
 
 add_library(cuda_kernels STATIC ${cuda_kernel_files})
 target_include_directories(cuda_kernels INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
