--- a/lightseq/inference/pywrapper/CMakeLists.txt
+++ b/lightseq/inference/pywrapper/CMakeLists.txt
@@ -11,7 +11,8 @@ pybind11_add_module(
   quant_bert.cc
   quant_gpt.cc
   moe.cc
-  vit.cc)
+  vit.cc
+  t5.cc)
 target_link_libraries(lightseq PUBLIC gpt_model)
 target_link_libraries(lightseq PUBLIC bert_model)
 target_link_libraries(lightseq PUBLIC transformer_model)
@@ -20,6 +21,7 @@ target_link_libraries(lightseq PUBLIC quant_bert_model)
 target_link_libraries(lightseq PUBLIC quant_gpt_model)
 target_link_libraries(lightseq PUBLIC moe_model)
 target_link_libraries(lightseq PUBLIC vit_model)
+target_link_libraries(lightseq PUBLIC t5_model)
 set_target_properties(lightseq PROPERTIES OUTPUT_NAME inference)
 
 add_library(
@@ -31,7 +33,8 @@ add_library(
   quant_bert.cc
   quant_gpt.cc
   moe.cc
-  vit.cc)
+  vit.cc
+  t5.cc)
 target_link_libraries(liblightseq PUBLIC transformer_model)
 target_link_libraries(liblightseq PUBLIC quant_transformer_model)
 target_link_libraries(liblightseq PUBLIC quant_bert_model)
@@ -40,6 +43,7 @@ target_link_libraries(liblightseq PUBLIC gpt_model)
 target_link_libraries(liblightseq PUBLIC bert_model)
 target_link_libraries(liblightseq PUBLIC moe_model)
 target_link_libraries(liblightseq PUBLIC vit_model)
+target_link_libraries(liblightseq PUBLIC t5_model)
 target_link_options(liblightseq PUBLIC $<DEVICE_LINK:-Xcompiler
                     -fvisibility=hidden>)
 target_include_directories(liblightseq PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
