--- a/lightseq/inference/proto/CMakeLists.txt
+++ b/lightseq/inference/proto/CMakeLists.txt
@@ -18,6 +18,7 @@ protobuf_generate_cpp(TRANSFORMER_PROTO_SRC TRANSFORMER_PROTO_HEADER
                       transformer.proto)
 protobuf_generate_cpp(MOE_PROTO_SRC MOE_PROTO_HEADER moe.proto)
 protobuf_generate_cpp(VIT_PROTO_SRC VIT_PROTO_HEADER vit.proto)
+protobuf_generate_cpp(T5_PROTO_SRC T5_PROTO_HEADER t5.proto)
 
 add_library(gpt_weight STATIC gpt_weight.cc ${GPT_PROTO_SRC}
                               ${GPT_PROTO_HEADER})
@@ -78,3 +79,14 @@ add_library(vit_weight STATIC vit_weight.cc ${VIT_PROTO_SRC}
 target_link_libraries(vit_weight PUBLIC utils ${Protobuf_LIBRARIES})
 target_include_directories(vit_weight PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_include_directories(vit_weight PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
+
+
+add_library(
+  t5_weight STATIC t5_weight.cc ${T5_PROTO_SRC}
+                            ${T5_PROTO_HEADER})
+target_link_libraries(t5_weight PUBLIC utils ${Protobuf_LIBRARIES}
+                                                ${HDF5_LIBRARIES})
+target_include_directories(t5_weight
+                           PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(t5_weight
+                           PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
