add mt5 in inference/proto folder

--- a/lightseq/inference/proto/CMakeLists.txt
+++ b/lightseq/inference/proto/CMakeLists.txt
@@ -19,6 +19,7 @@ protobuf_generate_cpp(TRANSFORMER_PROTO_SRC TRANSFORMER_PROTO_HEADER
 protobuf_generate_cpp(MOE_PROTO_SRC MOE_PROTO_HEADER moe.proto)
 protobuf_generate_cpp(VIT_PROTO_SRC VIT_PROTO_HEADER vit.proto)
 protobuf_generate_cpp(T5_PROTO_SRC T5_PROTO_HEADER t5.proto)
+protobuf_generate_cpp(MT5_PROTO_SRC MT5_PROTO_HEADER mt5.proto)
 
 add_library(gpt_weight STATIC gpt_weight.cc ${GPT_PROTO_SRC}
                               ${GPT_PROTO_HEADER})
@@ -85,3 +86,10 @@ target_link_libraries(t5_weight PUBLIC utils ${Protobuf_LIBRARIES}
                                        ${HDF5_LIBRARIES})
 target_include_directories(t5_weight PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_include_directories(t5_weight PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
+
+
+add_library(mt5_weight STATIC mt5_weight.cc ${MT5_PROTO_SRC} ${MT5_PROTO_HEADER})
+target_link_libraries(mt5_weight PUBLIC utils ${Protobuf_LIBRARIES}
+                                       ${HDF5_LIBRARIES})
+target_include_directories(mt5_weight PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(mt5_weight PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
