add mt5 in inference/pywrapper folder

--- a/lightseq/inference/pywrapper/CMakeLists.txt
+++ b/lightseq/inference/pywrapper/CMakeLists.txt
@@ -12,7 +12,9 @@ pybind11_add_module(
   quant_gpt.cc
   moe.cc
   vit.cc
-  t5.cc)
+  t5.cc
+  mt5.cc)
+
 target_link_libraries(lightseq PUBLIC gpt_model)
 target_link_libraries(lightseq PUBLIC bert_model)
 target_link_libraries(lightseq PUBLIC transformer_model)
@@ -22,6 +24,7 @@ target_link_libraries(lightseq PUBLIC quant_gpt_model)
 target_link_libraries(lightseq PUBLIC moe_model)
 target_link_libraries(lightseq PUBLIC vit_model)
 target_link_libraries(lightseq PUBLIC t5_model)
+target_link_libraries(lightseq PUBLIC mt5_model)
 set_target_properties(lightseq PROPERTIES OUTPUT_NAME inference)
 
 add_library(
@@ -34,7 +37,8 @@ add_library(
   quant_gpt.cc
   moe.cc
   vit.cc
-  t5.cc)
+  t5.cc
+  mt5.cc)
 target_link_libraries(liblightseq PUBLIC transformer_model)
 target_link_libraries(liblightseq PUBLIC quant_transformer_model)
 target_link_libraries(liblightseq PUBLIC quant_bert_model)
@@ -44,6 +48,7 @@ target_link_libraries(liblightseq PUBLIC bert_model)
 target_link_libraries(liblightseq PUBLIC moe_model)
 target_link_libraries(liblightseq PUBLIC vit_model)
 target_link_libraries(liblightseq PUBLIC t5_model)
+target_link_libraries(liblightseq PUBLIC mt5_model)
 target_link_options(liblightseq PUBLIC $<DEVICE_LINK:-Xcompiler
                     -fvisibility=hidden>)
 target_include_directories(liblightseq PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
