--- a/lightseq/csrc/core/CMakeLists.txt
+++ b/lightseq/csrc/core/CMakeLists.txt
@@ -2,22 +2,12 @@ find_package(Threads REQUIRED)
 
 include_directories(includes)
 
-add_library(
-    node SHARED node.cpp
-)
+add_library(node SHARED node.cpp)
 
-add_library(
-    context SHARED context.cpp
-)
+add_library(context SHARED context.cpp)
 
-add_library(
-    manager SHARED manager.cpp
-)
+add_library(manager SHARED manager.cpp)
 
-add_library(
-    layer SHARED layer.cpp
-)
+add_library(layer SHARED layer.cpp)
 
-add_library(
-    tensor SHARED tensor.cpp
-)
+add_library(tensor SHARED tensor.cpp)
