--- a/lightseq/csrc/lsflow/example/CMakeLists.txt
+++ b/lightseq/csrc/lsflow/example/CMakeLists.txt
@@ -1,9 +1,5 @@
-add_executable(lsflow_bin test_example.cpp)
+add_executable(lsflow_bin main.cpp)
 
 include_directories(../includes)
 
-target_link_libraries(lsflow_bin PUBLIC node)
-target_link_libraries(lsflow_bin PUBLIC context)
-target_link_libraries(lsflow_bin PUBLIC manager)
-target_link_libraries(lsflow_bin PUBLIC layer)
-target_link_libraries(lsflow_bin PUBLIC tensor)
+target_link_libraries(lsflow_bin PUBLIC lsflow)
