--- a/lightseq/csrc/lsflow/CMakeLists.txt
+++ b/lightseq/csrc/lsflow/CMakeLists.txt
@@ -6,13 +6,11 @@ find_package(Threads REQUIRED)
 
 set(CMAKE_CXX_STANDARD 14)
 
-find_package(CUDAToolkit)
-
 include_directories(includes)
 
 add_library(lsflow STATIC context.cpp node.cpp manager.cpp layer.cpp tensor.cpp)
 
-target_link_libraries(lsflow PUBLIC cuda_kernels)
+target_link_libraries(lsflow PUBLIC cuda_kernels -lcublas)
 
 if(DEBUG)
   add_subdirectory(example)
