--- a/lightseq/csrc/kernels/CMakeLists.txt
+++ b/lightseq/csrc/kernels/CMakeLists.txt
@@ -1,6 +1,19 @@
 find_package(CUDAToolkit)
 
-set(cuda_kernel_files cuda_util.cu transform_kernels.cu embedding_kernels.cu)
+set(cuda_kernel_files 
+    cross_entropy.cu
+    cublas_wrappers.cu
+    cuda_util.cu 
+    dropout_kernels.cu
+    embedding_kernels.cu
+    # fused_adam_kernel.cu
+    general_kernels.cu
+    normalize_kernels.cu
+    softmax_kernels.cu
+    softmax_kernels_new.cu
+    transform_kernels.cu
+    transform_kernels_new.cu
+)
 
 add_library(cuda_kernels STATIC ${cuda_kernel_files})
-target_include_directories(cuda_kernels INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(cuda_kernels INTERFACE includes)
